--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
-    "name": "note-taker",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.18.2"
-    }
+  "name": "note-taker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "mysql2": "^2.3.3",
+    "path": "^0.12.7",
+    "uuid": "^9.0.0",
+    "uuidv1": "^1.6.14"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danielshang11/DSY-Note-Taker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/danielshang11/DSY-Note-Taker/issues"
+  },
+  "homepage": "https://github.com/danielshang11/DSY-Note-Taker#readme"
 }
